--- a/index.html
+++ b/index.html
@@ -6,11 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link href="main.css"  type="text/css" rel="stylesheet" />
-
+    <script src="src/utils.js"></script>
+    <script src="bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script type="text/javascript" src="src/components/regions-barchart.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
   </head>
   <body>
-    <div id="app" class="flex center"></div>
-    <script src="bundle.js"></script>
-  </body>
+      <strong>Bar Chart of Political Leaning by Region</strong>
+      <div id="container" style="width: 75%;">
+        <canvas id="RegionsBarChart"></canvas>
+      </div>
+      <button id="toggleParties" onclick="toggleParties()">Toggle Parties</button>
+      <script>
+        const SECRETKEY = "$2a$10$95O3pYS8s40pMgpxV.LKI.n5pC9JTNFa3MODMZzfDG2JAZ3mhrIFe";
+
+        function groupBy(data, key) {
+          return data.reduce((acc, row) => {
+            if (!acc[row[key]]) {
+              acc[row[key]] = [];
+            }
+            acc[row[key]].push(row);
+            return acc;
+          }, {});
+        }
+
+        function getElectionsData() {
+          let req = new XMLHttpRequest();
+
+          req.onreadystatechange = () => {
+            if (req.readyState == XMLHttpRequest.DONE) {
+              console.log(req.responseText);
+            }
+          };
+          
+          req.open("GET", "https://api.jsonbin.io/b/5cfa90ecd2127723845da142", true);
+          req.setRequestHeader("secret-key", SECRETKEY);
+          req.send();
+
+          return req;
+        }
+
+        const countryData = getElectionsData();
+        // const regions = [...new Set(countryData.map(d => d.Region))];
+        const regions = countryData[0];
+        console.log(regions);
+
+        var chart = document.getElementById("RegionsBarChart");
+        var myData = [12, 19, 3, 5, 2, 3];
+        var regionsBarChart = new Chart(chart, {
+            type: 'bar',
+            data: {
+                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                datasets: [{
+                    label: '# of Votes',
+                    data: myData,
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
+            }
+        });
+
+        function toggleParties() {
+            myData = [3, 5, 9, 14, 40, 102];
+            regionsBarChart.data.datasets[0].data = myData;
+            regionsBarChart.update();
+        }
+      </script>
+    </body>
 </html>
