--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
     <link rel="stylesheet" href="https://unpkg.com/react-vis/dist/style.css">
   </head>
   <body>
-      <strong>Bar Chart of Political Leaning by Region</strong>
-      <div id="container" style="width: 75%;">
+      <div id="container" style="width: 60%; float: left">
+        <strong>Bar Chart of Political Leaning by Region</strong>
         <canvas id="RegionsBarChart"></canvas>
       </div>
-      <!-- <button id="toggleParties" onclick="toggleParties()">Toggle Parties</button> -->
+      <div id="text1" style="width: 39%; float:right; padding-top: 30px;">
+        <p>
+          The bar chart to the left allows the user to both hover over the individual bars
+          in order to see more exact values (for ratio comparisons) and change the datasets displayed by clicking on the
+          legend. By only displaying the political leanings in the first and last election,
+          in at least 6 of the regions -- namely Western Europe, Southwestern Europe, Southern Europe, Central Asia, and Southwest Asia --
+          there has been a signficiant rise in their weighted election score between the first and last election.
+          A more positive weighted election score signals more right-wing politics and a more negative score represents a more left-wing political leaning.
+          In only 3 regions -- Northern Europe, Southeastern Europe, and North America -- did we see a rise in left-wing politics.
+          The last 3 regions -- Eastern Europe, Central Europe, and the Middle East -- did we see no change.
+        </p>
+      </div>
       <script>
         const SECRETKEY = "$2a$10$95O3pYS8s40pMgpxV.LKI.n5pC9JTNFa3MODMZzfDG2JAZ3mhrIFe";
 
@@ -37,12 +48,6 @@
 
         function getElectionsData() {
           let req = new XMLHttpRequest();
-
-          // req.onreadystatechange = () => {
-          //   if (req.readyState == XMLHttpRequest.DONE) {
-          //     console.log(req.responseText);
-          //   }
-          // };
 
           let countryData = null;
           
@@ -188,7 +193,17 @@
                         yAxes: [{
                             ticks: {
                                 beginAtZero: true
+                            },
+                            scaleLabel: {
+                              display: true,
+                              labelString: 'Weighted Probability Score'
                             }
+                        }],
+                        xAxes: [{
+                          scaleLabel: {
+                              display: true,
+                              labelString: 'Regions'
+                          }
                         }]
                     }
                 }
@@ -207,50 +222,6 @@
 
         const countryData = getElectionsData();
 
-        // var chart = document.getElementById("RegionsBarChart");
-        // var myData = [12, 19, 3, 5, 2, 3];
-        // var regionsBarChart = new Chart(chart, {
-        //     type: 'bar',
-        //     data: {
-        //         labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-        //         datasets: [{
-        //             label: '# of Votes',
-        //             data: myData,
-        //             backgroundColor: [
-        //                 'rgba(255, 99, 132, 0.2)',
-        //                 'rgba(54, 162, 235, 0.2)',
-        //                 'rgba(255, 206, 86, 0.2)',
-        //                 'rgba(75, 192, 192, 0.2)',
-        //                 'rgba(153, 102, 255, 0.2)',
-        //                 'rgba(255, 159, 64, 0.2)'
-        //             ],
-        //             borderColor: [
-        //                 'rgba(255, 99, 132, 1)',
-        //                 'rgba(54, 162, 235, 1)',
-        //                 'rgba(255, 206, 86, 1)',
-        //                 'rgba(75, 192, 192, 1)',
-        //                 'rgba(153, 102, 255, 1)',
-        //                 'rgba(255, 159, 64, 1)'
-        //             ],
-        //             borderWidth: 1
-        //         }]
-        //     },
-        //     options: {
-        //         scales: {
-        //             yAxes: [{
-        //                 ticks: {
-        //                     beginAtZero: true
-        //                 }
-        //             }]
-        //         }
-        //     }
-        // });
-
-        // function toggleParties() {
-        //     myData = [3, 5, 9, 14, 40, 102];
-        //     regionsBarChart.data.datasets[0].data = myData;
-        //     regionsBarChart.update();
-        // }
       </script>
     </body>
 </html>
