--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           in at least 6 of the regions -- namely Western Europe, Southwestern Europe, Southern Europe, Central Asia, and Southwest Asia --
           there has been a signficiant rise in their weighted election score between the first and last election.
           A more positive weighted election score signals more right-wing politics and a more negative score represents a more left-wing political leaning.
-          In only 3 regions -- Northern Europe, Southeastern Europe, and North America -- did we see a rise in left-wing politics.
-          The last 3 regions -- Eastern Europe, Central Europe, and the Middle East -- did we see no change.
+          In only 3 regions -- Northern Europe, Southeastern Europe, and North America -- we saw a rise in left-wing politics.
+          The last 3 regions -- Eastern Europe, Central Europe, and the Middle East -- we saw no change.
         </p>
       </div>
       <script>
