--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                       {
                         scaleLabel: {
                           display: true,
-                          labelString: 'Regions'
+                          labelString: 'Countries in ' + region
                         }
                       }
                     ]
@@ -317,7 +317,7 @@
                       {
                         scaleLabel: {
                           display: true,
-                          labelString: 'Regions'
+                          labelString: 'Countries in Region'
                         }
                       }
                     ]
