--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
 
-      <!-- Bar 1 (David) -->
+      <!-- Bar (David) -->
       <div class="vis-group">
         <div class="vis-text">
           The bar chart below allows the user to both hover over the individual bars in order to see more
@@ -339,7 +339,7 @@
 
       <hr />
 
-      <!-- Map 1 (Joe) -->
+      <!-- Scatter (Joe) -->
       <div class="vis-group">
         <!-- Joe fill this part with real text -->
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ratione velit aut deserunt, minus,
