--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         </div>
       </div>
 
+      <div class="vis-text">Since the beginning of the millennium, the world has been rapidly changing. From technology to politics, every realm of the human life has been shifting and readjusting itself to a more globalized and connected world. With these changes, the political views and ideologies of people have been getting affected as well. For the last few years, the media has been continuously focusing on one major phenomenon: the rise of right-wing politics. Although this topic has been getting a lot of coverage, we were curious regarding the validity of such claim. Thus, we decided to analyze election data from the start of the millennium in order to decisively see how the political alignment of people has shifted. In our research and analysis, we focused on a few broad regions: North America, Europe, and the Middle East. This webpage includes several visualizations that display some of our core findings, with more information about such ideas above each visualization.</div>
+
+      <hr>
+
       <!-- Bar (David) -->
       <div class="vis-group">
         <div class="vis-text">
